--- a/reports/qmd_example.html
+++ b/reports/qmd_example.html
@@ -3274,7 +3274,7 @@ window.Quarto = {
 </div>
 </div>
 <p>We can see from <strong>?@fig-horse-pops</strong> that Ontario, Saskatchewan, and Alberta have had the highest horse populations in Canada. All provinces have had a decline in horse populations since 1940. This is likely due to the rebound of the Canadian automotive industry after the Great Depression and the Second World War. An interesting follow-up visualization would be car sales per year for each province over the time period visualized above to further support this hypothesis.</p>
-<p>Suppose we were interested in looking more closely at the province with the highest spread (in terms of standard deviation) of horse populations. We present the standard deviations in <strong>?@tbl-std</strong>..</p>
+<p>Suppose we were interested in looking more closely at the province with the highest spread (in terms of standard deviation) of horse populations. We present the standard deviations in <strong>?@tbl-std</strong>.</p>
 <div class="cell">
 <div class="cell-output-display">
 <table class="caption-top table table-sm table-striped small">
